--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -13,19 +13,19 @@ Como se expuso anteriormente, el protocolo criptográfico que se presenta en est
 
 \subsection{Factibilidad técnica}
 
-Para el desarrollo de este trabajo terminal, se cuenta con el software necesario para la implementación del protocolo criptográfico propuesto,  ya que este existe y esta disponible para su uso y disponibilidad inmediata al desarrollo del protocolo. Cabe mencionar que las insumos que involucran todo el desarrollo del protocolo, se encuentran completas en tanto a funcionalidades, soportes, documentación, seguridad, etc. 
-En cuanto a los conocimientos necesarios al protocolo, se cuentan con los suficientes que este protocolo necesita para su applicación. Dichos conocimientos se han adquirido a lo largo de la estadía en la ingeniería mediante las clases recibidas en las instalaciones de la  escuela o por la adquisición por medios externos. Ahora bien, un pequeño inconveniente para la aplicación del protocolo, es el desarrollo del software, ya que existen partes fundamentales del protocolo que requieren de nuevo conocimiento que aun no se adquiere y es necesario aprender, por tanto existe una pequeña posibilidad de que esto signifique un retraso en la producción del protocolo. 
+Para el desarrollo de este trabajo terminal, se cuenta con el software necesario para la implementación del protocolo criptográfico propuesto, ya que este existe y esta disponible para su uso y disponibilidad inmediata al desarrollo del protocolo. Cabe mencionar que los insumos que involucran todo el desarrollo del protocolo, se encuentran completas en tanto a funcionalidades, soportes, documentación, seguridad, etc. 
+En cuanto a los conocimientos necesarios al protocolo, se cuentan con los suficientes que este protocolo necesita para su aplicación. Dichos conocimientos se han adquirido a lo largo de la estadía en la ingeniería mediante las clases recibidas en las instalaciones de la escuela o por la adquisición por medios externos. Ahora bien, un pequeño inconveniente para la aplicación del protocolo, es el desarrollo del software, ya que existen partes fundamentales del protocolo que requieren de nuevo conocimiento que aun no se adquiere y es necesario aprender, por tanto, existe una pequeña posibilidad de que esto signifique un retraso en la producción del protocolo. 
 
 \begin{itemize}
 
-	\item \textbf{Lenguaje de programación:} para el desarrollo del sistema se estará trabajando con varios lenguajes de programación, la base de este desarrollo será Python, ya que es un lenguaje de fácil comprensión y con una lógica bastante familiar a lenguajes que anteriormente se habían trabajado, además de que Python nos permite trabajar primitivas criptográficas con una mayor facilidad. \\
-	\item \textbf{Sistema gestor de base de datos:} Se implementará MySQL como un manejador de base de datos, ya que es software libre y además se cuenta con una mayor experiencia de manejo y entendimiento. 
+\item \textbf{Lenguaje de programación:} para el desarrollo del sistema se estará trabajando con varios lenguajes de programación, la base de este desarrollo será Python, ya que es un lenguaje de fácil comprensión y con una lógica bastante familiar a lenguajes que anteriormente se habían trabajado, además de que Python nos permite trabajar primitivas criptográficas con una mayor facilidad. \\
+\item \textbf{Sistema gestor de base de datos:} Se implementará MySQL como un manejador de base de datos, ya que es software libre y además se cuenta con una mayor experiencia de manejo y entendimiento. 
 \\
 De acuerdo con los requerimientos del sistema, los componentes necesarios para la implementación de este protocolo son: 
 
-	\item \textbf{Hardware} 
-Se requiere de equipo de cómputo para poder llevar a cabo la codificación del protocolo y la configuración de los servidores que le darán soporte a las actividades realizadas en la interacción del usuario con el sistema. El equipo de trabajo cuenta con 3 computadoras personales (LAPTOP) que son las siguientes: 
-\begin{longtable}{ |  p{5cm} |  p{10.5cm} |}
+\item \textbf{Hardware} 
+Se requiere de equipo de cómputo para poder llevar a cabo la codificación del protocolo y la configuración de los servidores que les darán soporte a las actividades realizadas en la interacción del usuario con el sistema. El equipo de trabajo cuenta con 3 computadoras personales (LAPTOP) que son las siguientes: 
+\begin{longtable}{ | p{5cm} | p{10.5cm} |}
 
 % aquí añadimos el encabezado de la primera hoja.
 \hline
@@ -48,46 +48,46 @@ Se requiere de equipo de cómputo para poder llevar a cabo la codificación del 
 \endlastfoot
 
 Laptop HP Pavilion g4 & \begin{itemize}
-				\item Procesador: AMD A6-4400M APU 2.70Hz
-				\item Memoria RAM: 8.00GB 
-				\item Disco Duro: 750GB
-				\item Tipo Sistema: 64bits x64
-			      \end{itemize} \\ \hline
+\item Procesador: AMD A6-4400M APU 2.70Hz
+\item Memoria RAM: 8.00GB 
+\item Disco Duro: 750GB
+\item Tipo Sistema: 64bits x64
+\end{itemize} \\ \hline
 
-Laptop Acer Aspire V5 &  \begin{itemize}
-				\item Procesador: Intel(R) Celeron(R)  1.50GHz 
-				\item Memoria RAM: 2.00GB
-				\item Disco Duro: 250GB
-				\item Tipo Sistema: 64bits x64
-			      \end{itemize} \\ \hline
+Laptop Acer Aspire V5 & \begin{itemize}
+\item Procesador: Intel(R) Celeron(R) 1.50GHz 
+\item Memoria RAM: 2.00GB
+\item Disco Duro: 250GB
+\item Tipo Sistema: 64bits x64
+\end{itemize} \\ \hline
 
-Laptop HP probook &  \begin{itemize}
-				\item Procesador: AMD Phenom(tm) ll X2 545  3.00GHz 
-				\item Memoria RAM: 4.00GB
-				\item Disco Duro: 350GB
-				\item Tipo Sistema: 64bits x64
-			      \end{itemize} \\ \hline
+Laptop HP probook & \begin{itemize}
+\item Procesador: AMD Phenom(tm) ll X2 545 3.00GHz 
+\item Memoria RAM: 4.00GB
+\item Disco Duro: 350GB
+\item Tipo Sistema: 64bits x64
+\end{itemize} \\ \hline
 
-Servidor ownCloud &  \begin{itemize}
-				\item Servicio de alojamiento de archivos con almacenamiento en la nube
-				\item Servidores de instalación: PHP, SQLite. MySQL, PostgreSQL
-				\item Servidor de archivos: WebDAV
-				\item Calendario de sincronzación: CardDAV
-				\item Sistema operativo: MMultiplataforma
-			      \end{itemize} \\ \hline
+Servidor ownCloud & \begin{itemize}
+\item Servicio de alojamiento de archivos con almacenamiento en la nube
+\item Servidores de instalación: PHP, SQLite. MySQL, PostgreSQL
+\item Servidor de archivos: WebDAV
+\item Calendario de sincronzación: CardDAV
+\item Sistema operativo: MMultiplataforma
+\end{itemize} \\ \hline
 \caption{Componentes físicos}
 \label{Hardware}
 \end{longtable}
 
-	\item \textbf{Software}
-Con respecto al software, no se pretende usar un sistema operativo en específico ya que el servicio de la nube es compatible con cualquier sistema operativo en que se esté desarrollando. Sin embargo se cuenta con los siguientes sitemas operativos: 
+\item \textbf{Software}
+Con respecto al software, no se pretende usar un sistema operativo en específico ya que el servicio de la nube es compatible con cualquier sistema operativo en que se esté desarrollando. Sin embargo, se cuenta con los siguientes sitemas operativos: 
 
 \begin{table}[htb]
 \centering
-\begin{tabular}{| p{5cm} |  p{10.5cm} |}
+\begin{tabular}{| p{5cm} | p{10.5cm} |}
 \hline
 \multicolumn{2}{|c|}{\textbf{Softawe}} \\ \hline
-\textbf{Tipo} &  \textbf{Cantidad} \\
+\textbf{Tipo} & \textbf{Cantidad} \\
 \hline \hline
 S.O. Windows 8.1 Pro & 2\\ \hline
 S.O. Windows 10 Pro & 1\\ \hline
@@ -101,14 +101,14 @@ S.O. Windows 10 Pro & 1\\ \hline
 
 
 \subsection{Factibilidad operativa}
-El uso e implantación de este protocolo criptográfico, tiene como principal objetivo el eliminar las duplicaciones de archivos que se almacenan en la nube y de igual manera el evitar los ataques de adversarios por fuerza bruta a la información de los ususrios en la nube , por lo cual resulta factible la operación del proyecto, ya que se esta proponiendo una solución de bajo costo con grandes eneficios.
+El uso e implantación de este protocolo criptográfico, tiene como principal objetivo el eliminar las duplicaciones de archivos que se almacenan en la nube y de igual manera el evitar los ataques de adversarios por fuerza bruta a la información de los usuarios en la nube, por lo cual resulta factible la operación del proyecto, ya que se esta proponiendo una solución de bajo costo con grandes eneficios.
 Hoy en día va en aumento el número de usuarios de la nube, ya sean empresas, organizaciones, personas, etc. todos estos usuarios buscan su información rapido y de fácil acceso en cualquier lugar con una conexión a internet, y esto hace que también caumente la cantidad de información almacenada que en ocasiones está replicada en uno o mas usuarios.
 Este protocolo pretende atender al problema del crecimiento en la infraestructura de la nube ofreciendo una solución para contrarestarlo y de esa manera más usuarios podrán tener acceso a la nube sin necesidad de aumentar a la infraestructura de esta.
 
 \subsection{Facctibilidad económica}
 El estudio de factibilidad económica nos permite analizar los costo - beneficios monetarios que se obtendrán con el desarrollo del proyecto, ya que dicho protocolo en un largo plazo podría comenzar en producción industrial para su comercialización y districución en el mercado de las tecnologías de la información, ya que proveerá de servicios en el cómputo nube que hoy en día las empresas están optando por invertir en el y optimizar sus recursos y procesos del negocio. 
 
-En cuanto al análisis de el gasto económico que se requiere para la implementación y la realización de pruebas del protocolo, existe un beneficio ya que todos los componentes para el desarrollo del sistema son libres,es decir que no se realizará la adquisición de licencias de desarrollo ni programas para la implementación. 
+En cuanto al análisis de el gasto económico que se requiere para la implementación y la realización de pruebas del protocolo, existe un beneficio ya que todos los componentes para el desarrollo del sistema son libres, es decir que no se realizará la adquisición de licencias de desarrollo ni programas para la implementación. 
 \\ El servidor que nos proveerá del almacenamiento en la nube de nombre \textbf{ownCloud.org} es de libre acceso y no existe restricción alguna para la utilización de este. Nos permite una libre manipulación y configuración de tal modo que podamos cumplir nuestros objetivos.
 
 
@@ -117,18 +117,18 @@ En cuanto al análisis de el gasto económico que se requiere para la implementa
 El análisis de riesgos consiste en identificar los riesgos que este sistema puede tener en su implementación y desarrollo. Este análisis realizado a este trabajo terminal, se llevó a cabo bajo la metodología de análisis de riesgos presentada por Ian Sommerville en el libro Ingeniería del software ~\cite{sommerville}, dicho autor presenta los posibles riesgos identificados en un sistema y 3 indicadores (Prioridad, Probabilidad e Impacto) fundamentales para llevar a cabo la gestión de riesgos y así tener presente cuales son los riesgos más destacados en el proyecto para dimensionar las consecuencias que estos podrían traer consigo si llegaran a ocurrir. Para elaborar este análisis de riesgos, se evaluaron los impactos que estos riesgos pueden traer, mediante 5 escalas de impacto de un riesgo, dichas escalas son: 
 
 \subsubsection{Escalas de impacto de un riesgo}
-\begin{longtable}{| p{2.5cm} |  p{2.5cm} |  p{2.5cm} |  p{2.5cm} |  p{2.5cm} |  p{2.7cm} |}
+\begin{longtable}{| p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.7cm} |}
 
 % aquí añadimos el encabezado de la primera hoja.
 \hline
 \multicolumn{6}{|c|}{\textbf{Escalas de impacto de un riesgo}} \\ \hline
-\textit{\textbf{Objetivo del proyecto}} &  \textbf{Muy bajo/ 0.05} & \textbf{Bajo/ 0.10} & \textbf{Moderado/ 0.20} & \textbf{Alto/ 0.40} & \textbf{Muy alto/ 0.80}\\
+\textit{\textbf{Objetivo del proyecto}} & \textbf{Muy bajo/ 0.05} & \textbf{Bajo/ 0.10} & \textbf{Moderado/ 0.20} & \textbf{Alto/ 0.40} & \textbf{Muy alto/ 0.80}\\
 \hline \hline
 \endfirsthead
 
 % aquí añadimos el encabezado del resto de hojas.
 \hline
-\textit{\textbf{Objetivo del proyecto}} &  \textbf{Muy bajo/ 0.05} & \textbf{Bajo/ 0.10} & \textbf{Moderado/ 0.20} & \textbf{Alto/ 0.40} & \textbf{Muy alto/ 0.80}\\
+\textit{\textbf{Objetivo del proyecto}} & \textbf{Muy bajo/ 0.05} & \textbf{Bajo/ 0.10} & \textbf{Moderado/ 0.20} & \textbf{Alto/ 0.40} & \textbf{Muy alto/ 0.80}\\
 \hline \hline
 \endhead
 
@@ -140,10 +140,10 @@ El análisis de riesgos consiste en identificar los riesgos que este sistema pue
 \endlastfoot
 
 
-\textbf{Costo} & Aumento insignificante de costo & Aumento del costo <10\% &  Aumento del costo 10 - 20\% & Aumento del costo 20 - 40\% & Aumento del costo >40\%  \\ \hline
-\textbf{Tiempo} & Aumento insignificante de tiempo & Aumento del tiempo <5\% &  Aumento del tiempo 5 - 10\% & Aumento del tiempo 10 - 20\% & Aumento del tiempo >20\%  \\ \hline
-\textbf{Alcance} & Disminución del alcance apenas perceptible & Áreas de alcance secundarias afectadas & Áreas de alcance principales afectadas & Reducción del alcance inaceptable para los objetivos &  El producto terminado es inservible\\ \hline
-\textbf{Calidad} & Degradación de calidad apenas perceptible & Sólo las aplicaciones muy exigentes se ven afectadas & La reducción de la calidad requiere aprobación externa & Reducción de calidad inaceptable &  El producto terminado es inservible\\ \hline
+\textbf{Costo} & Aumento insignificante de costo & Aumento del costo <10\% & Aumento del costo 10 - 20\% & Aumento del costo 20 - 40\% & Aumento del costo >40\% \\ \hline
+\textbf{Tiempo} & Aumento insignificante de tiempo & Aumento del tiempo <5\% & Aumento del tiempo 5 - 10\% & Aumento del tiempo 10 - 20\% & Aumento del tiempo >20\% \\ \hline
+\textbf{Alcance} & Disminución del alcance apenas perceptible & Áreas de alcance secundarias afectadas & Áreas de alcance principales afectadas & Reducción del alcance inaceptable para los objetivos & El producto terminado es inservible\\ \hline
+\textbf{Calidad} & Degradación de calidad apenas perceptible & Sólo las aplicaciones muy exigentes se ven afectadas & La reducción de la calidad requiere aprobación externa & Reducción de calidad inaceptable & El producto terminado es inservible\\ \hline
 
 \caption{Escalas de impacto de un riesgo ~\cite{sommerville}} 
 \label{Riesgos}
@@ -155,13 +155,13 @@ El análisis de riesgos consiste en identificar los riesgos que este sistema pue
 % aquí añadimos el encabezado de la primera hoja.
 \hline
 \multicolumn{6}{|c|}{\textbf{Análisis de riesgos}} \\ \hline
-\textbf{ID} &  \textbf{Riesgo} & \textbf{Prioridad} & \textbf{Probabilidad} & \textbf{Impacto} & \textbf{Causa}\\
+\textbf{ID} & \textbf{Riesgo} & \textbf{Prioridad} & \textbf{Probabilidad} & \textbf{Impacto} & \textbf{Causa}\\
 \hline \hline
 \endfirsthead
 
 % aquí añadimos el encabezado del resto de hojas.
 \hline
-\textbf{ID} &  \textbf{Riesgo} & \textbf{Prioridad} & \textbf{Probabilidad} & \textbf{Impacto} & \textbf{Causa}\\
+\textbf{ID} & \textbf{Riesgo} & \textbf{Prioridad} & \textbf{Probabilidad} & \textbf{Impacto} & \textbf{Causa}\\
 \hline \hline
 \endhead
 
@@ -173,9 +173,9 @@ El análisis de riesgos consiste en identificar los riesgos que este sistema pue
 \endlastfoot
 
 % aquí añadimos el cuerpo de la tabla.
-R1 & Modificar requerimientos &  ALTA & MEDIA & ALTO & Se agregan nuevos o modificación de requerimientos actuales \\ \hline
+R1 & Modificar requerimientos & ALTA & MEDIA & ALTO & Se agregan nuevos o modificación de requerimientos actuales \\ \hline
 R2 & Cambios en tecnología & BAJA & MEDIA & BAJO & La tecnología usada es menos eficiente y causa conflictos \\ \hline
-R3 & Falta de usuarios y peticiones & ALTA & BAJA &  BAJO & No se localizaron todos los involucrados en el protocolo \\ \hline
+R3 & Falta de usuarios y peticiones & ALTA & BAJA & BAJO & No se localizaron todos los involucrados en el protocolo \\ \hline
 R4 & Equipo de cómputo & ALTA & BAJA & MUY BAJO & El equipo de cómputo empleado falla o no se encuentra funcionando \\ \hline
 R5 & Incumplimiento de acuerdos & ALTA & ALTA & MODERADO & Retraso en actividades programadas \\ \hline
 R6 & Problemas de planeación & MEDIA & ALTA & ALTO & Falta de comunicación por parte del equipo \\ \hline
@@ -199,13 +199,13 @@ Así mismo, el riesg no puede ser mitigado en su totalidad y mucho menos evitar 
 % aquí añadimos el encabezado de la primera hoja.
 \hline
 \multicolumn{3}{|c|}{\textbf{Plan de acción para riesgos del proyecto}} \\ \hline
-\textbf{ID} &  \textbf{Riesgo} & \textbf{Acción a realizar} \\
+\textbf{ID} & \textbf{Riesgo} & \textbf{Acción a realizar} \\
 \hline \hline
 \endfirsthead
 
 % aquí añadimos el encabezado del resto de hojas.
 \hline
-\textbf{ID} &  \textbf{Riesgo} & \textbf{Acción a realizar} \\
+\textbf{ID} & \textbf{Riesgo} & \textbf{Acción a realizar} \\
 \hline \hline
 \endhead
 
@@ -217,12 +217,12 @@ Así mismo, el riesg no puede ser mitigado en su totalidad y mucho menos evitar 
 \endlastfoot
 
 % aquí añadimos el cuerpo de la tabla.
-R1 & Modificar requerimientos & Se cuenta como un requerimiento no funcional la mantenibilidad, en la cuál dice que cada nuevo requerimiento tendrá que ser analizado para cuantificar las implicaciones de este y su efectividad  \\ \hline
+R1 & Modificar requerimientos & Se cuenta como un requerimiento no funcional la mantenibilidad, en la cuál dice que cada nuevo requerimiento tendrá que ser analizado para cuantificar las implicaciones de este y su efectividad \\ \hline
 R2 & Cambios en tecnología & En cuanto exista una nueva tecnología, se analizarán las ventajas y desventajas de ésta para posteriormente tomar una desición para actualizar o conservar dicha tecnología\\ \hline
 R3 & Falta de usuarios y peticiones & El sistema tendrá como máximo 118ms de latencia, en caso de persistir el problema se volverá a realizar la petición y en el peor escenario se notificará del error al administrador del sistema para su correción \\ \hline
 R4 & Equipo de cómputo & Cuando exista una falla en el equipo de cómputo que opera el sistema, se procederá a poner fuera de línea el sistema para poder cambiar o reparar el equipo que se encuentra dañado \\ \hline
 R5 & Incumplimiento de acuerdos & En caso de retrazo en actividades programadas, se procederá a una reunión con el equipo de trabajo para dar prioridades a las actividades y avanzar en un mínimo periódo de tiempo \\ \hline
-R6 & Problemas de planeación & En caso de presentarse la falta o erronea  comunicación en el equipo, se procederá a una reunión con todo el equipo para revisar los incidentes y re plantear las actividades \\ \hline
+R6 & Problemas de planeación & En caso de presentarse la falta o erronea comunicación en el equipo, se procederá a una reunión con todo el equipo para revisar los incidentes y re plantear las actividades \\ \hline
 R7 & Falta de recursos & A falta de recursos, se buscará la adquisición de estos a costos más bajos a los actuales o se tendrá que adquirir una deuda con un acreedor ajeno al proyecto \\ \hline
 R8 & Falta de conocimientos & Cuando se presente este problema, el equipo debe inmediatamente reunirse para poder planificar cursos de capacitación, talleres, conferencias, etc. \\ \hline
 R9 & Sobre estimación de insumos & Los insumos utilizados en el proyecto están especificados desde el inicio del proyecto, en caso de que esta especificación falle se tendrá que realizar una nueva valoración de los insumos que sean necesarios.
@@ -239,64 +239,64 @@ R9 & Sobre estimación de insumos & Los insumos utilizados en el proyecto están
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=18cm, height=11cm]{./images/Arqui.jpg}
-	\caption{Arquitectura general del sistema.}
+\includegraphics[width=18cm, height=11cm]{./images/Arqui.jpg}
+\caption{Arquitectura general del sistema.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=11cm]{./images/Paso01.jpg}
-	\caption{Arquitectura del sistema paso 1.}
+\includegraphics[width=16cm, height=11cm]{./images/Paso01.jpg}
+\caption{Arquitectura del sistema paso 1.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=13cm]{./images/Paso02.jpg}
-	\caption{Arquitectura del sistema paso 2.}
+\includegraphics[width=16cm, height=13cm]{./images/Paso02.jpg}
+\caption{Arquitectura del sistema paso 2.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=10cm]{./images/Paso03.jpg}
-	\caption{Arquitectura del sistema paso 3.}
+\includegraphics[width=16cm, height=10cm]{./images/Paso03.jpg}
+\caption{Arquitectura del sistema paso 3.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=10cm]{./images/Paso3_5.jpg}
-	\caption{Arquitectura del sistema paso 4.}
+\includegraphics[width=16cm, height=10cm]{./images/Paso3_5.jpg}
+\caption{Arquitectura del sistema paso 4.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=11cm]{./images/Paso04.jpg}
-	\caption{Arquitectura del sistema paso 5.}
+\includegraphics[width=16cm, height=11cm]{./images/Paso04.jpg}
+\caption{Arquitectura del sistema paso 5.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=13cm]{./images/Paso05.jpg}
-	\caption{Arquitectura del sistema paso 6.}
+\includegraphics[width=16cm, height=13cm]{./images/Paso05.jpg}
+\caption{Arquitectura del sistema paso 6.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=10cm]{./images/Paso06.jpg}
-	\caption{Arquitectura del sistema paso 7.}
+\includegraphics[width=16cm, height=10cm]{./images/Paso06.jpg}
+\caption{Arquitectura del sistema paso 7.}
 
 \end{figure}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=10cm]{./images/Paso07.jpg}
-	\caption{Arquitectura del sistema paso 8.}
+\includegraphics[width=16cm, height=10cm]{./images/Paso07.jpg}
+\caption{Arquitectura del sistema paso 8.}
 
 \end{figure}
 
@@ -312,40 +312,40 @@ El proceso inicia cuando el cliente desea subir un archivo nuevo, el cliente deb
 % - - - - - - - - - - - - - - - - - - - - - - - - -
 \subsubsection{Participantes}
 
-\begin{tabular}{ |p{2cm}|p{6cm}|p{6cm}|  }
+\begin{tabular}{ |p{2cm}|p{6cm}|p{6cm}| }
 \hline
-\multicolumn{3}{|c|}{  Participantes  } \\
+\multicolumn{3}{|c|}{ Participantes } \\
 \hline
 
-{ Nombre }  & { Descripción } & { Responsabilidades} \\
+{ Nombre } & { Descripción } & { Responsabilidades} \\
 \hline
-{ Servidor } &  Actor que realiza la firma a ciegas del archivo.  &  
-			\begin{itemize}	
-				\item Firma a ciegas.
+{ Servidor } & Actor que realiza la firma a ciegas del archivo. & 
+\begin{itemize} 
+\item Firma a ciegas.
 
-			\end{itemize}   \\ 
+\end{itemize} \\ 
 \hline
-{ Cliente } &   Actor que sube archivos a la Nube.  &  
-			\begin{itemize}	
-				\item Selecciona archivo a subir.
-				\item Genera hash del archivo. 
-				\item Calcula la llave k.
-				\item Cifra los archivos a subir.
-			\end{itemize}   \\ 
+{ Cliente } & Actor que sube archivos a la Nube. & 
+\begin{itemize} 
+\item Selecciona archivo a subir.
+\item Genera hash del archivo. 
+\item Calcula la llave k.
+\item Cifra los archivos a subir.
+\end{itemize} \\ 
 \hline
-{ Nube } &   Actor que almacena los archivos.  &  
-			\begin{itemize}	
-				\item Almacena los archivos seleccionados.
-				\item Genera lista de usuarios relacionados.
-			\end{itemize}   \\ 
+{ Nube } & Actor que almacena los archivos. & 
+\begin{itemize} 
+\item Almacena los archivos seleccionados.
+\item Genera lista de usuarios relacionados.
+\end{itemize} \\ 
 \hline
 \end{tabular}
 
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=17cm, height=7cm]{./images/BPM_Subir.png}
-	\caption{BPMN Subir archivo.}
+\includegraphics[width=17cm, height=7cm]{./images/BPM_Subir.png}
+\caption{BPMN Subir archivo.}
 
 \end{figure}
 
@@ -358,32 +358,32 @@ El proceso inicia cuando el cliente da clic en la opción de descargar archivo y
 % - - - - - - - - - - - - - - - - - - - - - - - - -
 \subsubsection{Participantes}
 
-\begin{tabular}{ |p{2cm}|p{6cm}|p{6cm}|  }
+\begin{tabular}{ |p{2cm}|p{6cm}|p{6cm}| }
 \hline
-\multicolumn{3}{|c|}{  Participantes  } \\
+\multicolumn{3}{|c|}{ Participantes } \\
 \hline
 
-{ Nombre }  & { Descripción } & { Responsabilidades} \\
+{ Nombre } & { Descripción } & { Responsabilidades} \\
 \hline
-{ Cliente } &   Actor que descarga archivos de la Nube.  &  
-			\begin{itemize}	
-				\item Selecciona archivo a descargar.
-				\item Descifra los archivos descargados.
-			\end{itemize}   \\ 
+{ Cliente } & Actor que descarga archivos de la Nube. & 
+\begin{itemize} 
+\item Selecciona archivo a descargar.
+\item Descifra los archivos descargados.
+\end{itemize} \\ 
 \hline
-{ Nube } &   Actor que almacena los archivos.  &  
-			\begin{itemize}	
-				\item Almacena los archivos seleccionados.
-				\item Genera lista de usuarios relacionados.
-				\item Enviar los archivos a descargar.
-			\end{itemize}   \\ 
+{ Nube } & Actor que almacena los archivos. & 
+\begin{itemize} 
+\item Almacena los archivos seleccionados.
+\item Genera lista de usuarios relacionados.
+\item Enviar los archivos a descargar.
+\end{itemize} \\ 
 \hline
 \end{tabular}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=7cm]{./images/BPM_Descargar.png}
-	\caption{BPMN Descargar archivo.}
+\includegraphics[width=16cm, height=7cm]{./images/BPM_Descargar.png}
+\caption{BPMN Descargar archivo.}
 
 \end{figure}
 
@@ -397,30 +397,30 @@ El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente 
 % - - - - - - - - - - - - - - - - - - - - - - - - -
 \subsubsection{Participantes}
 
-\begin{tabular}{ |p{2cm}|p{6cm}|p{6cm}|  }
+\begin{tabular}{ |p{2cm}|p{6cm}|p{6cm}| }
 \hline
-\multicolumn{3}{|c|}{  Participantes  } \\
+\multicolumn{3}{|c|}{ Participantes } \\
 \hline
 
-{ Nombre }  & { Descripción } & { Responsabilidades} \\
+{ Nombre } & { Descripción } & { Responsabilidades} \\
 \hline
-{ Cliente } &   Actor que elimina archivos de la Nube.  &  
-			\begin{itemize}	
-				\item Selecciona archivo a eliminar.
-			\end{itemize}   \\ 
+{ Cliente } & Actor que elimina archivos de la Nube. & 
+\begin{itemize} 
+\item Selecciona archivo a eliminar.
+\end{itemize} \\ 
 \hline
-{ Nube } &   Actor que almacena los archivos.  &  
-			\begin{itemize}	
-				\item Elimina los archivos seleccionados.
-				\item Genera lista de usuarios relacionados.
-			\end{itemize}   \\ 
+{ Nube } & Actor que almacena los archivos. & 
+\begin{itemize} 
+\item Elimina los archivos seleccionados.
+\item Genera lista de usuarios relacionados.
+\end{itemize} \\ 
 \hline
 \end{tabular}
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=7cm]{./images/BPM_Eliminar.png}
-	\caption{BPMN Eliminar archivo.}
+\includegraphics[width=16cm, height=7cm]{./images/BPM_Eliminar.png}
+\caption{BPMN Eliminar archivo.}
 
 \end{figure} 
 
@@ -432,8 +432,8 @@ El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente 
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=16cm, height=10cm]{./images/BDTT2.png}
-	\caption{Diagrama Entidad relación del sistema.}
+\includegraphics[width=16cm, height=10cm]{./images/BDTT2.png}
+\caption{Diagrama Entidad relación del sistema.}
 
 \end{figure} 
 
@@ -443,8 +443,8 @@ El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente 
 
 \begin{figure}[H]
 \centering
-	\includegraphics[width=18cm, height=15cm]{./images/DiagramaClasesTT.png}
-	\caption{Diagarama de clases del sistema.}
+\includegraphics[width=18cm, height=15cm]{./images/DiagramaClasesTT.png}
+\caption{Diagrama de clases del sistema.}
 
 \end{figure} 
 \newpage
@@ -453,10 +453,10 @@ El proceso inicia cuando el cliente desea eliminar un archivo nuevo, el cliente 
 
 \begin{table}[htb]
 \centering
-\begin{tabular}{| p{2cm} |  p{13.5cm} |}
+\begin{tabular}{| p{2cm} | p{13.5cm} |}
 \hline
 \multicolumn{2}{|c|}{\textbf{Requerimientos funcionales del protocolo}} \\ \hline
-\textbf{ID} &  \textbf{Descripción} \\
+\textbf{ID} & \textbf{Descripción} \\
 \hline \hline
 RF1 & El sistema permitirá el registro de un nuevo usuario \\ \hline
 RF2 & El sistema permitirá al usuario iniciar sesión para comenzar a manipular su información \\ \hline
@@ -473,12 +473,12 @@ RF4 & El sistema permitirá al usuario gestionar los archivos que dicho usuario 
 
 \begin{table}[htb]
 \centering
-\begin{tabular}{| p{2cm} |  p{13.5cm} |}
+\begin{tabular}{| p{2cm} | p{13.5cm} |}
 \hline
 \multicolumn{2}{|c|}{\textbf{Servidor de Llaves}} \\ \hline
-\textbf{ID} &  \textbf{Descripción} \\
+\textbf{ID} & \textbf{Descripción} \\
 \hline \hline
-RF – SLL1 &El sistema permitirá la generación de llaves de usuario a través de las llaves pública y privada  del servidor de llaves \\ \hline
+RF – SLL1 &El sistema permitirá la generación de llaves de usuario a través de las llaves pública y privada del servidor de llaves \\ \hline
 RF – SLL2 & El sistema permitirá la firma a ciegas (y) de cualquier archivo que se desee almacenar\\ \hline
 \end{tabular}
 \caption{Requerimientos funcionales del servidor de llaves}
@@ -488,15 +488,15 @@ RF – SLL2 & El sistema permitirá la firma a ciegas (y) de cualquier archivo q
 
 \begin{table}[htb]
 \centering
-\begin{tabular}{| p{2cm} |  p{13.5cm} |}
+\begin{tabular}{| p{2cm} | p{13.5cm} |}
 \hline
 \multicolumn{2}{|c|}{\textbf{Cliente}} \\ \hline
-\textbf{ID} &  \textbf{Descripción} \\
+\textbf{ID} & \textbf{Descripción} \\
 \hline \hline
 RF – CL1 & El sistema permitirá al usuario gestionar archivos: Subir, Descargar, Eliminar \\ \hline
-RF – CL2 & El sistema permitirá al usuario subir un archivo (F) cifrado al servicio de almacenamiento   \\ \hline
+RF – CL2 & El sistema permitirá al usuario subir un archivo (F) cifrado al servicio de almacenamiento \\ \hline
 RF – CL3 & El sistema permitirá al usuario descargar un archivo (F) descifrado elegido de su lista de archivos en el servicio de almacenamiento. \\ \hline
-RF – CL4 &El sistema permitirá al usuario eliminar un archivo (F) cuando el usuario elige alguno de su lista de archivos cargados en el servicio de almacenamiento.   \\ \hline
+RF – CL4 &El sistema permitirá al usuario eliminar un archivo (F) cuando el usuario elige alguno de su lista de archivos cargados en el servicio de almacenamiento. \\ \hline
 \end{tabular}
 \caption{Requerimientos funcionales del cliente}
 \label{Cliente }
@@ -505,13 +505,13 @@ RF – CL4 &El sistema permitirá al usuario eliminar un archivo (F) cuando el u
 
 \begin{table}[htb]
 \centering
-\begin{tabular}{| p{2cm} |  p{13.5cm} |}
+\begin{tabular}{| p{2cm} | p{13.5cm} |}
 \hline
 \multicolumn{2}{|c|}{\textbf{Servicio de almacenamiento (Nube)}} \\ \hline
-\textbf{ID} &  \textbf{Descripción} \\
+\textbf{ID} & \textbf{Descripción} \\
 \hline \hline
 
-RF – N1 & El sistema permitirá al servicio de almacenamiento llevar a cabo un proceso para la detección de archivos duplicados.  \\ \hline
+RF – N1 & El sistema permitirá al servicio de almacenamiento llevar a cabo un proceso para la detección de archivos duplicados. \\ \hline
 
 \end{tabular}
 \caption{Requerimientos funcionales del Servicio de almacenamiento (Nube)}
@@ -525,13 +525,13 @@ RF – N1 & El sistema permitirá al servicio de almacenamiento llevar a cabo un
 % aquí añadimos el encabezado de la primera hoja.
 \hline
 \multicolumn{3}{|c|}{\textbf{Requerimientos No Funcionales}} \\ \hline
-\textbf{ID} &  \textbf{Atributo} & \textbf{Descripción}\\
+\textbf{ID} & \textbf{Atributo} & \textbf{Descripción}\\
 \hline \hline
 \endfirsthead
 
 % aquí añadimos el encabezado del resto de hojas.
 \hline
-\textbf{ID} &  \textbf{Atributo} & \textbf{Descripción}\\
+\textbf{ID} & \textbf{Atributo} & \textbf{Descripción}\\
 \hline \hline
 \endhead
 
@@ -543,46 +543,46 @@ RF – N1 & El sistema permitirá al servicio de almacenamiento llevar a cabo un
 \endlastfoot
 
 % aquí añadimos el cuerpo de la tabla.
-RNF1 & Eficiencia &  \begin{itemize} 
-   \item El servidor de llaves tendrá la capacidad de realizar 1000 peticiones de gestión de almacenamiento de archivos por segundo. 
-   \item El sistema podrá funcionar de forma correcta con usuarios conectados de manera concurrente. 
-   \item Los archivos que sean gestionados dentro del servidor de almacenamiento, deben ser actualizados en la base datos y la visualización de cada cliente de manera casi inmediata. 
-  \end{itemize}
+RNF1 & Eficiencia & \begin{itemize} 
+\item El servidor de llaves tendrá la capacidad de realizar 1000 peticiones de gestión de almacenamiento de archivos por segundo. 
+\item El sistema podrá funcionar de forma correcta con usuarios conectados de manera concurrente. 
+\item Los archivos que sean gestionados dentro del servidor de almacenamiento, deben ser actualizados en la base datos y la visualización de cada cliente de manera casi inmediata. 
+\end{itemize}
 \\ \hline
 
-RNF2 & Fiabilidad &  \begin{itemize} 
-  \item La pérdida de consultas en el servidor de llaves es menor a 3 veces el máximo de consultas realizadas. 
-   \item Los archivos almacenados en el servidor de almacenamiento deben ser recuperados por el usuario al instante en que este lo solicite. 
-   \item El tiempo de latencia que existe entre el servidor de llaves y el cliente será de máximo 118ms. 
- \end{itemize}
+RNF2 & Fiabilidad & \begin{itemize} 
+\item La pérdida de consultas en el servidor de llaves es menor a 3 veces el máximo de consultas realizadas. 
+\item Los archivos almacenados en el servidor de almacenamiento deben ser recuperados por el usuario al instante en que este lo solicite. 
+\item El tiempo de latencia que existe entre el servidor de llaves y el cliente será de máximo 118ms. 
+\end{itemize}
 \\ \hline
 
 RNF3 & Seguridad & \begin{itemize} 
-    \item El sistema almacenará los datos de los usuarios y sus contraseñas en una base de datos MySQL, dichos datos serán modificados mínimo 2  veces al año.  
-   \item Se autenticarán los clientes antes de comenzar el proceso de generación de llaves de archivo. 
-   \item El servidor de llaves firmará claves para un sólo mensaje a la vez sin saber el contenido de éste. 
-   \item El inicio de sesión de usuarios estará protegido en un canal seguro utilizando algoritmos criptográficos. 
-   \item Las funciones hash de archivos a almacenar utilizarán la función criptográfica SHA-(256)
-   \item Los formularios para ingresar datos al sistema estarán validados por tipo de dato, longitud e internamente se utilizará un ORM (Object Relational Maping) para evitar inyecciones SQL. 
- \end{itemize}
+\item El sistema almacenará los datos de los usuarios y sus contraseñas en una base de datos MySQL, dichos datos serán modificados mínimo 2 veces al año. 
+\item Se autenticarán los clientes antes de comenzar el proceso de generación de llaves de archivo. 
+\item El servidor de llaves firmará claves para un sólo mensaje a la vez sin saber el contenido de éste. 
+\item El inicio de sesión de usuarios estará protegido en un canal seguro utilizando algoritmos criptográficos. 
+\item Las funciones hash de archivos a almacenar utilizarán la función criptográfica SHA-(256)
+\item Los formularios para ingresar datos al sistema estarán validados por tipo de dato, longitud e internamente se utilizará un ORM (Object Relational Maping) para evitar inyecciones SQL. 
+\end{itemize}
 
 \\ \hline 
 RNF4 & Mantenibilidad & \begin{itemize}
-   \item Cuaquier nuevo requerimiento funcional o no funcional tendrá que ser analizado y diseñado para poder cuantificar las implicaciones que este tendrá sobre el funcionamiento del sistema. 
-   \item El sistema contará con un plan de pruebas que facilitará la identificación de posibles fallas existentes en el funcionamiento de este. 
- \end{itemize}
+\item Cualquier nuevo requerimiento funcional o no funcional tendrá que ser analizado y diseñado para poder cuantificar las implicaciones que este tendrá sobre el funcionamiento del sistema. 
+\item El sistema contará con un plan de pruebas que facilitará la identificación de posibles fallas existentes en el funcionamiento de este. 
+\end{itemize}
 
 \\ \hline
 RNF5 & Usabilidad & \begin{itemize}
-   \item El tiempo de aprendizaje del sistema por un usuario deberá ser menor a 15 días. 
-   \item El sistema debe proporcionar mensajes de error que sean informativos y orientados al usuario final. 
-   \item El sistema debe poseer interfaces gráficas bien formadas.
- \end{itemize}
+\item El tiempo de aprendizaje del sistema por un usuario deberá ser menor a 15 días. 
+\item El sistema debe proporcionar mensajes de error que sean informativos y orientados al usuario final. 
+\item El sistema debe poseer interfaces gráficas bien formadas.
+\end{itemize}
 
 \\ \hline
 RNF6 & Extensibilidad & \begin{itemize}
-   \item El sistema podrá tener un crecimiento a futuro ya que este será programado por módulos lo cuál hará más fácil su crecimiento.
- \end{itemize}
+\item El sistema podrá tener un crecimiento a futuro ya que este será programado por módulos lo cual hará más fácil su crecimiento.
+\end{itemize}
 \\ \hline
 \caption{Requerimientos no funcionales del sistema}
 \label{Requerimientos no funcionales }
@@ -591,21 +591,21 @@ RNF6 & Extensibilidad & \begin{itemize}
 \section{Reglas de Negocio}
 
 \begin{BussinesRule}{RN1}{Datos requeridos} 
-	\BRitem[Descripción:]  El usuario debe ingresar toda la información marcada como requerida en el modelo conceptual del negocio.
-	\BRitem[Tipo:] Restricción de operación.	
+\BRitem[Descripción:] El usuario debe ingresar toda la información marcada como requerida en el modelo conceptual del negocio.
+\BRitem[Tipo:] Restricción de operación. 
 \end{BussinesRule}
 
 \begin{BussinesRule}{RN2}{Datos correctos} 
-	\BRitem[Descripción:] La información que el usuario proporcione, debe ser del tipo y longitud definida en el modelo conceptual del negocio.
-	\BRitem[Tipo:] Restricción de operación.	
+\BRitem[Descripción:] La información que el usuario proporcione, debe ser del tipo y longitud definida en el modelo conceptual del negocio.
+\BRitem[Tipo:] Restricción de operación. 
 \end{BussinesRule}
 
 \begin{BussinesRule}{RN3}{Unicidad de elementos} 
-	\BRitem[Descripción:] Hay ciertos elementos que no pueden repetirse, ya sea por ser idénticos o por coincidir en uno o más datos. Esto se define como dato único en la tabla de atributos del modelo conceptual del negocio para cada entidad.
-	\BRitem[Tipo:] Restricción de operación.	
+\BRitem[Descripción:] Hay ciertos elementos que no pueden repetirse, ya sea por ser idénticos o por coincidir en uno o más datos. Esto se define como dato único en la tabla de atributos del modelo conceptual del negocio para cada entidad.
+\BRitem[Tipo:] Restricción de operación. 
 \end{BussinesRule}
 
 \begin{BussinesRule}{RN4}{Usuario registrado} 
-	\BRitem[Descripción:] El usuarios debe tener una cuenta activa en el sistema.
-	\BRitem[Tipo:] Hecho
+\BRitem[Descripción:] El usuario debe tener una cuenta activa en el sistema.
+\BRitem[Tipo:] Hecho
 \end{BussinesRule}
