--- a/TT-2016-B045/archivosTex/diseño.tex
+++ b/TT-2016-B045/archivosTex/diseño.tex
@@ -1,7 +1,7 @@
 %\usepackage{casouso_estilo}
 %\chapter{An\'alisis y Dise\~no} % (fold)
 
-El capítulo de diseño, esta conformado por la especificación de como está conformado el protocolo cirptográfico. Dicho capítulo contiene la especificación de la plataforma del protocolo, es decir, los recursos tanto de hardware como de software necesarios para poder desarrollar el proyecto con las herramientas tecnológicas necesarias. El capítulo muestra los modelos de entidades del protocolo, dichos modelos comprenden el modelo entidad relación que corresponde a la base de datos creada para la persistencia de los datos involucrados en el protocolo, y el diagrama de clases que brinda un bosquejo del funcionamiento e interacción de atributos y operaciones del protocolo. Por último, se muestra la descripción de todos los casos de uso que conforman al proyecto. 
+El capítulo de diseño, está conformado por la especificación de cómo está conformado el protocolo criptográfico. Dicho capítulo contiene la especificación de la plataforma del protocolo, es decir, los recursos tanto de hardware como de software necesarios para poder desarrollar el proyecto con las herramientas tecnológicas necesarias. El capítulo muestra los modelos de entidades del protocolo, dichos modelos comprenden el modelo entidad relación que corresponde a la base de datos creada para la persistencia de los datos involucrados en el protocolo, y el diagrama de clases que brinda un bosquejo del funcionamiento e interacción de atributos y operaciones del protocolo. Por último, se muestra la descripción de todos los casos de uso que conforman al proyecto. 
 
 
 
@@ -62,10 +62,10 @@ El capítulo de diseño, esta conformado por la especificación de como está co
 \section{Casos de Uso}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/CasosDeUso}
-		\caption{Diagrama de Casos de Uso del sistema.}
-	\end{figure}
+\centering
+\includegraphics[width=1\textwidth]{images/CasosDeUso}
+\caption{Diagrama de Casos de Uso del sistema.}
+\end{figure}
 
 \cfinput{casosUso/Servidor/CUSLLIndex}
 \cfinput{casosUso/Nube/CUNIndex}
@@ -77,114 +77,114 @@ El capítulo de diseño, esta conformado por la especificación de como está co
 \subsection{Registrar Usuario}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Registrar_usuario}
-		\caption{Diagrama de secuencias de Registrar un usuario nuevo.}
+\centering
+\includegraphics[width=1\textwidth]{images/Registrar_usuario}
+\caption{Diagrama de secuencias de Registrar un usuario nuevo.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_a}
-		\caption{Diagrama de secuencias de Registrar un usuario nuevo con datos incorrectos.}
+\centering
+\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_a}
+\caption{Diagrama de secuencias de Registrar un usuario nuevo con datos incorrectos.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_b}
-		\caption{Diagrama de secuencias de Registrar un usuario nuevo con datos incompletos.}
+\centering
+\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_b}
+\caption{Diagrama de secuencias de Registrar un usuario nuevo con datos incompletos.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_c}
-		\caption{Diagrama de secuencias de Registrar un usuario nuevo con usuario repetido.}
+\centering
+\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_c}
+\caption{Diagrama de secuencias de Registrar un usuario nuevo con usuario repetido.}
 \end{figure} 
 \newpage
 
 \subsection{Iniciar Sesión}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Iniciar_sesion}
-		\caption{Diagrama de secuencias de Iniciar sesion un usuario.}
+\centering
+\includegraphics[width=1\textwidth]{images/Iniciar_sesion}
+\caption{Diagrama de secuencias de Iniciar sesión un usuario.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Iniciar_trayectoria_a}
-		\caption{Diagrama de secuencias de Inicar sesion un usuario con datos incorrectos.}
+\centering
+\includegraphics[width=1\textwidth]{images/Iniciar_trayectoria_a}
+\caption{Diagrama de secuencias de Iniciar sesión un usuario con datos incorrectos.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Iniciar_trayectoria_b}
-		\caption{Diagrama de secuencias de Registrar un usuario nuevo con datos incompletos.}
+\centering
+\includegraphics[width=1\textwidth]{images/Iniciar_trayectoria_b}
+\caption{Diagrama de secuencias de Registrar un usuario nuevo con datos incompletos.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_c}
-		\caption{Diagrama de secuencias de  Inicar sesion un usuario con campos vacios.}
+\centering
+\includegraphics[width=1\textwidth]{images/Registrar_trayectoria_c}
+\caption{Diagrama de secuencias de Iniciar sesión un usuario con campos vacíos.}
 \end{figure} 
 \newpage
 
 \subsection{Subir Archivo}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Subir_Archivo}
-		\caption{Diagrama de secuencias de subir un archivo nuevo.}
+\centering
+\includegraphics[width=1\textwidth]{images/Subir_Archivo}
+\caption{Diagrama de secuencias de subir un archivo nuevo.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Subir_trayectoria_a}
-		\caption{Diagrama de secuencias de subir un archivo con carpeta vacia.}
+\centering
+\includegraphics[width=1\textwidth]{images/Subir_trayectoria_a}
+\caption{Diagrama de secuencias de subir un archivo con carpeta vacía.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Subir_trayectoria_b}
-		\caption{Diagrama de secuencias de subir un archivo incompatible.}
+\centering
+\includegraphics[width=1\textwidth]{images/Subir_trayectoria_b}
+\caption{Diagrama de secuencias de subir un archivo incompatible.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Subir_trayectoria_c}
-		\caption{Diagrama de secuencias de subir un archivo existente.}
+\centering
+\includegraphics[width=1\textwidth]{images/Subir_trayectoria_c}
+\caption{Diagrama de secuencias de subir un archivo existente.}
 \end{figure} 
 \newpage
 
 \subsection{Firma a ciegas}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Firma_ciegas}
-		\caption{Diagrama de secuencias de la firma a ciegas del servidor de llaves.}
+\centering
+\includegraphics[width=1\textwidth]{images/Firma_ciegas}
+\caption{Diagrama de secuencias de la firma a ciegas del servidor de llaves.}
 \end{figure} 
 \newpage
 
 \subsection{Descargar Archivo}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Descargar_Archivo}
-		\caption{Diagrama de secuencias de descargar un archivo de la nube.}
+\centering
+\includegraphics[width=1\textwidth]{images/Descargar_Archivo}
+\caption{Diagrama de secuencias de descargar un archivo de la nube.}
 \end{figure}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Descargar_aleternativa_a}
-		\caption{Diagrama de secuencias de descargar un archivo de la nube no encontrado.}
+\centering
+\includegraphics[width=1\textwidth]{images/Descargar_aleternativa_a}
+\caption{Diagrama de secuencias de descargar un archivo de la nube no encontrado.}
 \end{figure} 
 \newpage
 
 \subsection{Eliminar Archivo}
 
 \begin{figure}[htbp!]
-		\centering
-			\includegraphics[width=1\textwidth]{images/Eliminar_Archivo}
-		\caption{Diagrama de secuencias de eliminar un archivo de la nube.}
+\centering
+\includegraphics[width=1\textwidth]{images/Eliminar_Archivo}
+\caption{Diagrama de secuencias de eliminar un archivo de la nube.}
 \end{figure} 
 \newpage
 
